--- a/index.html
+++ b/index.html
@@ -75,44 +75,52 @@
           </div>
         </div>
       </div>
-    </div>
-    <hr />
-    <div class="container-hourly">
-      <h3 class="hourly"><strong>Temperature </strong> | Precipitation</h3>
-      <img
-        src="https://www.qpro.cz/Sluzby/Pocasi/graf.php?ID=187&JAZYK=1"
-        alt="Hourly Weather"
-      />
-    </div>
-    <hr />
-    <div class="container-tomorrow">
-      <div class="row">
-        <div class="col">Monday</div>
-        <div class="col">Tuesday</div>
-        <div class="col">Wednesday</div>
-        <div class="col">Thursday</div>
-        <div class="col">Friday</div>
-        <div class="col">Saturday</div>
+      <small>
+        <a
+          href="https://github.com/e-bellingham/WeatherApp/commit/ac2b54e131fe78c776e908d9c012729aeab909d9"
+          target="_blank"
+          >Open-source code</a
+        >, by Elizabeth Bellingham</small
+      >
+
+      <hr />
+      <div class="container-hourly">
+        <h3 class="hourly"><strong>Temperature </strong> | Precipitation</h3>
+        <img
+          src="https://www.qpro.cz/Sluzby/Pocasi/graf.php?ID=187&JAZYK=1"
+          alt="Hourly Weather"
+        />
       </div>
-    </div>
-    <div class="icons">
-      <div class="row">
-        <div class="col">🌞</div>
-        <div class="col">🌧</div>
-        <div class="col">🌩</div>
-        <div class="col">🌦</div>
-        <div class="col">⛅️</div>
-        <div class="col">🌞</div>
+      <hr />
+      <div class="container-tomorrow">
+        <div class="row">
+          <div class="col">Monday</div>
+          <div class="col">Tuesday</div>
+          <div class="col">Wednesday</div>
+          <div class="col">Thursday</div>
+          <div class="col">Friday</div>
+          <div class="col">Saturday</div>
+        </div>
       </div>
-    </div>
-    <div class="Temp">
-      <div class="row">
-        <div class="col">77°F</div>
-        <div class="col">83°F</div>
-        <div class="col">84°F</div>
-        <div class="col">72°F</div>
-        <div class="col">70°F</div>
-        <div class="col">67°F</div>
+      <div class="icons">
+        <div class="row">
+          <div class="col">🌞</div>
+          <div class="col">🌧</div>
+          <div class="col">🌩</div>
+          <div class="col">🌦</div>
+          <div class="col">⛅️</div>
+          <div class="col">🌞</div>
+        </div>
+      </div>
+      <div class="Temp">
+        <div class="row">
+          <div class="col">77°F</div>
+          <div class="col">83°F</div>
+          <div class="col">84°F</div>
+          <div class="col">72°F</div>
+          <div class="col">70°F</div>
+          <div class="col">67°F</div>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
