--- a/index.html
+++ b/index.html
@@ -26,53 +26,109 @@
     <title>Weather</title>
   </head>
   <body>
-    <div class="weather-container">
-      <div class="row">
-        <div class="col-6">
-          <h1>Weather</h1>
-        </div>
-        <div class="col-6">
-          <form id="search-form">
-            <input
-              type="search"
-              placeholder="Search for a city"
-              autocomplete="off"
-              autofocus="on"
-              id="search-text-input"
-            />
-            <button class="city-button">
-              <i class="fa-solid fa-magnifying-glass" id="magnifying-glass"></i>
-            </button>
-          </form>
-        </div>
-      </div>
-      <h2 id="location">Current Location</h2>
-      <h3 class="DDT">
-        <span id="current-day"></span> | <span id="current-date"></span> |
-        <span id="current-time"></span>
-      </h3>
-
-      <div class="container-today">
+    <div class="container">
+      <div class="weather-container">
         <div class="row">
-          <div class="col">
-            <span class="sun">🌞</span>
+          <div class="col-6">
+            <h1>Weather</h1>
           </div>
-          <div class="col">
-            <ul>
-              <li>
-                <strong>Tempurature: </strong><span id="current-temp"></span>
-                <a href="#" id="celcius-link">°C </a>|
-                <a href="#" id="fahrenheit-link">°F</a>
-              </li>
-              <li>
-                <strong>Wind: </strong
-                ><span id="current-wind-speed"></span> kts/
-                <span id="current-wind-direction"></span>°
-              </li>
-              <li>
-                <strong>Humidity: </strong> <span id="current-humidity"></span>%
-              </li>
-            </ul>
+          <div class="col-6">
+            <form id="search-form">
+              <input
+                type="search"
+                placeholder="Search for a city"
+                autocomplete="off"
+                autofocus="on"
+                id="search-text-input"
+              />
+              <button class="city-button">
+                <i
+                  class="fa-solid fa-magnifying-glass"
+                  id="magnifying-glass"
+                ></i>
+              </button>
+            </form>
+          </div>
+        </div>
+        <h2 id="location">Current Location</h2>
+        <h3 class="DDT">
+          <span id="current-day"></span> | <span id="current-date"></span> |
+          <span id="current-time"></span>
+        </h3>
+        <div class="container-today">
+          <div class="row">
+            <div class="col">
+              <div class="clearfix">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="clear-weather"
+                  class="float-left"
+                  id="sun"
+                />
+                <div class="float-left">
+                  <span id="current-temp">12</span
+                  ><small class="units">
+                    <a href="#" id="celcius-link">°C </a>|
+                    <a href="#" id="fahrenheit-link">°F</a></small
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <ul>
+                <li>
+                  <strong class="weather-info">Precipitation: </strong>
+                </li>
+                <li>
+                  <strong class="weather-info">Wind: </strong
+                  ><span id="current-wind-speed"></span> kts/
+                  <span id="current-wind-direction"></span>°
+                </li>
+                <li>
+                  <strong class="weather-info">Humidity: </strong>
+                  <span id="current-humidity"></span>%
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="container-hourly">
+          <h3 class="hourly"><strong>Temperature </strong> | Precipitation</h3>
+          <img
+            src="https://www.qpro.cz/Sluzby/Pocasi/graf.php?ID=187&JAZYK=1"
+            alt="Hourly Weather"
+          />
+        </div>
+        <hr />
+        <div class="container-tomorrow">
+          <div class="row">
+            <div class="col">Monday</div>
+            <div class="col">Tuesday</div>
+            <div class="col">Wednesday</div>
+            <div class="col">Thursday</div>
+            <div class="col">Friday</div>
+            <div class="col">Saturday</div>
+          </div>
+        </div>
+        <div class="icons">
+          <div class="row">
+            <div class="col">🌞</div>
+            <div class="col">🌧</div>
+            <div class="col">🌩</div>
+            <div class="col">🌦</div>
+            <div class="col">⛅️</div>
+            <div class="col">🌞</div>
+          </div>
+        </div>
+        <div class="Temp">
+          <div class="row">
+            <div class="col">77°F</div>
+            <div class="col">83°F</div>
+            <div class="col">84°F</div>
+            <div class="col">72°F</div>
+            <div class="col">70°F</div>
+            <div class="col">67°F</div>
           </div>
         </div>
       </div>
@@ -83,46 +139,6 @@
           >Open-source code</a
         >, by Elizabeth Bellingham</small
       >
-
-      <hr />
-      <div class="container-hourly">
-        <h3 class="hourly"><strong>Temperature </strong> | Precipitation</h3>
-        <img
-          src="https://www.qpro.cz/Sluzby/Pocasi/graf.php?ID=187&JAZYK=1"
-          alt="Hourly Weather"
-        />
-      </div>
-      <hr />
-      <div class="container-tomorrow">
-        <div class="row">
-          <div class="col">Monday</div>
-          <div class="col">Tuesday</div>
-          <div class="col">Wednesday</div>
-          <div class="col">Thursday</div>
-          <div class="col">Friday</div>
-          <div class="col">Saturday</div>
-        </div>
-      </div>
-      <div class="icons">
-        <div class="row">
-          <div class="col">🌞</div>
-          <div class="col">🌧</div>
-          <div class="col">🌩</div>
-          <div class="col">🌦</div>
-          <div class="col">⛅️</div>
-          <div class="col">🌞</div>
-        </div>
-      </div>
-      <div class="Temp">
-        <div class="row">
-          <div class="col">77°F</div>
-          <div class="col">83°F</div>
-          <div class="col">84°F</div>
-          <div class="col">72°F</div>
-          <div class="col">70°F</div>
-          <div class="col">67°F</div>
-        </div>
-      </div>
     </div>
     <script src="index.js"></script>
   </body>
