worked on trying to change icon with weather;unfinished

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
               <ul>
                 <li>
                   <strong class="weather-info">Wind: </strong
-                  ><span id="current-wind-speed"></span> kts /
-                  <span id="current-wind-direction"></span>°
+                  ><span class="value" id="current-wind-speed"></span> kts /
+                  <span class="value" id="current-wind-direction"></span>°
                 </li>
                 <li>
                   <strong class="weather-info">Humidity: </strong>
-                  <span id="current-humidity"></span>%
+                  <span class="value" id="current-humidity"></span>%
                 </li>
               </ul>
             </div>
@@ -95,6 +95,7 @@
           <img
             src="https://www.qpro.cz/Sluzby/Pocasi/graf.php?ID=187&JAZYK=1"
             alt="Hourly Weather"
+            id="icon"
           />
         </div>
         <hr />
