styled weekdays and temperatures

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <hr />
         <div class="container-tomorrow">
-          <div class="row">
+          <div class="row" id="weekdays">
             <div class="col">Monday</div>
             <div class="col">Tuesday</div>
             <div class="col">Wednesday</div>
@@ -119,7 +119,7 @@
             <div class="col">🌞</div>
           </div>
         </div>
-        <div class="Temp">
+        <div class="weeklyTemp">
           <div class="row">
             <div class="col">77°F</div>
             <div class="col">83°F</div>
