Restructured weekly-forecast and styling; HTML and CSS

--- a/index.html
+++ b/index.html
@@ -99,34 +99,80 @@
           />
         </div>
         <hr />
-        <div class="container-tomorrow">
+        <div class="weather-forecast">
           <div class="row" id="weekdays">
-            <div class="col">Monday</div>
-            <div class="col">Tuesday</div>
-            <div class="col">Wednesday</div>
-            <div class="col">Thursday</div>
-            <div class="col">Friday</div>
-            <div class="col">Saturday</div>
-          </div>
-        </div>
-        <div class="icons">
-          <div class="row">
-            <div class="col">🌞</div>
-            <div class="col">🌧</div>
-            <div class="col">🌩</div>
-            <div class="col">🌦</div>
-            <div class="col">⛅️</div>
-            <div class="col">🌞</div>
-          </div>
-        </div>
-        <div class="weeklyTemp">
-          <div class="row">
-            <div class="col">77°F</div>
-            <div class="col">83°F</div>
-            <div class="col">84°F</div>
-            <div class="col">72°F</div>
-            <div class="col">70°F</div>
-            <div class="col">67°F</div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Monday</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Tuesday</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Wednesday</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Thursday</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Friday</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Saturday</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="36"
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
