--- a/index.html
+++ b/index.html
@@ -99,82 +99,7 @@
           />
         </div>
         <hr />
-        <div class="weather-forecast">
-          <div class="row" id="weekdays">
-            <div class="col-2">
-              <div class="weather-forecast-date">Monday</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="36"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="weather-forecast-date">Tuesday</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="36"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="weather-forecast-date">Wednesday</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="36"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="weather-forecast-date">Thursday</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="36"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="weather-forecast-date">Friday</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="36"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="weather-forecast-date">Saturday</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="36"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="weather-forecast"></div>
       </div>
       <small>
         <a
