Removed middle section of page (precipitation chart);HTML. Applied API to daily weather forecast.

--- a/index.html
+++ b/index.html
@@ -85,17 +85,12 @@
                   <strong class="weather-info">Humidity: </strong>
                   <span class="value" id="current-humidity"></span>%
                 </li>
+                <li>
+                  <strong class="description"></strong>
+                </li>
               </ul>
             </div>
           </div>
-        </div>
-        <hr />
-        <div class="container-hourly">
-          <h3 class="hourly"><strong>Temperature </strong> | Precipitation</h3>
-          <img
-            src="https://www.qpro.cz/Sluzby/Pocasi/graf.php?ID=187&JAZYK=1"
-            alt="Hourly Weather"
-          />
         </div>
         <hr />
         <div class="weather-forecast" id="weather-forecast"></div>
