--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
                 <div class="float-left">
                   <span id="current-temp"></span
                   ><small class="units">
-                    <a href="#" id="celcius-link">°C </a>|
-                    <a href="#" id="fahrenheit-link">°F</a></small
+                    <a href="#" id="fahrenheit-link">°F </a> |
+
+                    <a href="#" id="celcius-link"> °C </a></small
                   >
                 </div>
               </div>
